fix: agrego flex wrap en navbar para que sea responsivo. nuevas fuentes con @import en index.css y las aplico en títulos, párrafos y botones

--- a/css/components/button-style.css
+++ b/css/components/button-style.css
@@ -23,6 +23,7 @@
 }
 
 .btn-reiniciar {
+  font-family: var(--fuente-btn);
   background-color: #d60fdd;
   border: 1px solid rgba(13, 171, 182, 0.2);
 }
